# DeepestScatter

./: .gitignore  Dependencies.md  LICENSE  README.md
DeepestScatter_DataGen/: DeepestScatter_DataGen.sln
DeepestScatter_DataGen/DeepestScatter_DataGen/: CMakeLists.txt  DeepestScatter_DataGen.vcxproj  DeepestScatter_DataGen.vcxproj.filters  Installers.cpp  progressive.cu
DeepestScatter_DataGen/DeepestScatter_DataGen/src/: Installers.h  Mie.cpp  Mie.h  Scene.cpp  Scene.h  installers.cpp  main.cpp
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Boost/: DIConfig.h  di.hpp  uml_dumper.hpp
DeepestScatter_DataGen/DeepestScatter_DataGen/src/CUDA/: DisneyDescriptor.cuh  DisneyDescriptor.h  LightProbe.cuh  LightProbe.h  PointRadianceTask.h  bakedCamera.cu  cameraCommon.cuh  cloud.cu  cloud.cuh  cloudBBox.cu  cloudFirstScatterMaterial.cu  cloudRadianceMaterials.cu  dataGenCamera.cu  disneyCamera.cu  disneyDescriptorCollector.cu  disneyDescriptorMaterial.cu  inScatter.cu  lightProbe.cu  lightProbeBaker.cu  lightProbeCollector.cu  lightProbeMaterial.cu  optixExtraMath.cuh  pathTracingCamera.cu  pinholeCamera.cu  pointEmissionCamera.cu  pointEmissionCamera.h  pointGeneratorCamera.cu  progressive.cu  random.cuh  rayData.cuh  reinhard.cu
DeepestScatter_DataGen/DeepestScatter_DataGen/src/ExecutionLoop/: ExecutionLoop.h  GuiExecutionLoop.cpp  GuiExecutionLoop.h  Tasks.cpp  Tasks.h
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Hypodermic/: Container.h  ContainerBuilder.h  ContainerInstanceRegistration.h  ContainerInstanceRegistrationActivator.h  IRegistrationActivator.h  PersistentInstanceRegistration.h  RegistrationActivator.h  RegistrationBuilder.h  TypeInfo.h
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Model/Disney/: Predictor.cpp  Predictor.h
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Scene/: BakedDescriptorCollector.cpp  BakedDescriptorCollector.h  Camera.cpp  Camera.h  CloudMaterial.cpp  CloudMaterial.h  CloudPTRenderer.cpp  CloudPTRenderer.h  DisneyDescriptorCollector.cpp  DisneyDescriptorCollector.h  RadianceCollector.cpp  RadianceCollector.h  ScatterSampleCollector.cpp  ScatterSampleCollector.h  Scene.cpp  Scene.h  SceneDescription.h  SceneItem.h  SceneSetupCollector.cpp  SceneSetupCollector.h  Sun.cpp  Sun.h  VDBCloud.cpp  VDBCloud.h
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Scene/Cameras/: ARenderer.h  BakedRenderer.cpp  BakedRenderer.h  Camera.cpp  Camera.h  DisneyRenderer.cpp  DisneyRenderer.h  EmptyRenderer.cpp  EmptyRenderer.h  PathTracingRenderer.cpp  PathTracingRenderer.h  RaytracedRenderer.cpp  RaytracedRenderer.h
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Util/: BufferBind.cpp  BufferBind.h  Resources.cpp  Resources.h  optixExtraMath.h  sutil.h  sutilapi.h
DeepestScatter_DataGen/DeepestScatter_DataGen/src/Util/Dataset/: BatchSettings.h  Dataset.cpp  Dataset.h  LmdbExceptions.cpp  LmdbExceptions.h  Transaction.cpp  Transaction.h
DeepestScatter_DataGen/DeepestScatter_DataGen/sutil/: Arcball.h  HDRLoader.h  Mesh.cpp  Mesh.h  OptiXMesh.h  PPMLoader.cpp  PPMLoader.h  glew.c  sutil.cpp  sutil.h
DeepestScatter_DataGen/DeepestScatter_DataGen/sutil/GL/: glew.h  wglew.h
DeepestScatter_Train/: DatasetVisualisation.ipynb  Datasets.py  DisneyBlock.py  DisneyDescriptorDataset.py  DisneyModel.py  ExportPytorchModel.py  GenerateSceneSetups.py  GlobalSettings.py  LmdbDataset.py  TrainDisneyModel.py  requirements.txt  runTensorboard.cmd  testLmdb.py
DeepestScatter_Train/Baked/: BakedDataset.py  BakedModel.py  LightProbeModel.py  ProbeRenderModel.py  TrainBakedModel.py
DeepestScatter_Train/Common/: BaseDataset.py  Trainer.py  Vector.py
DeepestScatter_Train/CppProtocols/: BakedDescriptor.pb.cc  BakedDescriptor.pb.h  BakedInterpolationSet.pb.cc  BakedInterpolationSet.pb.h  CppProtocols.vcxproj  CppProtocols.vcxproj.filters  DisneyDescriptor.pb.cc  DisneyDescriptor.pb.h  Result.pb.cc  Result.pb.h  ScatterSample.pb.cc  ScatterSample.pb.h  SceneSetup.pb.cc  SceneSetup.pb.h  Vector.pb.cc  Vector.pb.h
DeepestScatter_Train/Disney/: DisneyBlock.py  DisneyDataset.py  DisneyDescriptorDataset.py  DisneyModel.py  TrainDisneyModel.py
DeepestScatter_Train/Mimic/: MimicModel.py
DeepestScatter_Train/Protocols/: BakedDescriptor.proto  BakedInterpolationSet.proto  DisneyDescriptor.proto  Result.proto  ScatterSample.proto  SceneSetup.proto  Vector.proto
DeepestScatter_Train/PythonProtocols/: BakedDescriptor_pb2.py  BakedInterpolationSet_pb2.py  DisneyDescriptor_pb2.py  Result_pb2.py  ScatterSample_pb2.py  SceneSetup_pb2.py  Vector_pb2.py  __init__.py
DeepestScatter_Train/Utils/: GenerateComparisons.py  GenerateSceneSetups.py
Thesis/: MichaelPaninPresentation.pptx  program.txt
Thesis/latex/itmo-student-thesis/: bachelor-thesis.bib  bachelor-thesis.tex
